# newral

./: .env.example  .gitignore  Makefile  README.md  docker-compose.local-registry.yml  docker-compose.yml
.github/workflows/: agent-windows.yml  windows-agent.yml
client/agent/: Cargo.toml  config.example.toml
client/agent/src/: main.rs
config/: config.example.yml
db/: migrate.sh
db/migrations/: 0001_init.sql  0002_multi_project_schemas.sql  0003_project_guid_agents_metrics.sql  0004_project_task_type_column.sql  0005_task_time_columns.sql
deploy/helm/: README.md
deploy/helm/newral/: Chart.yaml  values.yaml
deploy/k8s/: README.md  configmap.yaml  identity-service-deployment.yaml  identity-service-service.yaml  namespace.yaml  secret.yaml
docs/: AI_MODES.md  BACKUP_RESTORE.md  CLIENT_AGENT.md  DATA_MODEL.md  DEPLOYMENT.md  K8S_MIGRATION_NOTES.md  MULTI_PROJECT.md  PLAN_MVP.md  POLICY_ENGINE.md  PORTAL.md  PORTAL_TS_MIGRATION.md  PROJECT_BRIEF.md  REFACTORING_NOTES.md  REPUTATION.md  SANDBOX_DISTRIBUTED.md  SANDBOX_MVP.md  SERVICE_CONVENTIONS.md
docs/ADR/: ADR-0001-compose-then-k8s.md  ADR-0002-messaging-kafka.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.js
frontend/src/: App.jsx  App.tsx  main.jsx  main.tsx  styles.css
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  select.tsx  table.tsx  tabs.tsx
gateway/: cors.conf  nginx.conf
prompts/: !_run_context.md  00_bootstrap_context.md  01_repo_k8s_ready_standards.md  02_compose_infra_mvp.md  03_vertical_slice_services_v0.md  04_db_schema_and_migrations.md  05_reputation_and_dr_mann.md  06_ai_modes_and_policy_engine.md  07_storage_backup_restore.md  08_k8s_skeleton_one_service.md  09_client_agent_stub.md  10_gateway_and_portal_foundation.md  11_portal_investor_polish.md  12_projects_schemas_api.md  13_agent_python_sandbox_mvp.md  14_demo_project_wordcount.md  15_github_actions_windows_agent_release.md  16_minor_fixes_and_agent_new.md  17_distributed_sandbox_architecture.md  18_repo_refactor.md  19_platform_ui_design.md  20_newral_com_site.md  21_distributed_project_architecture.md  22_bpsw_project_tasks.md  23_hardware_metrics_telegraf.md  24_agent_eula.md  25_agent_redesign.md  26_admin_portal_navigation.md
scripts/: backup.sh  registry_sync.sh  restore.sh  smoke_demo.sh  version.sh
scripts/bpsw/: bpsw_worker.py
services/common/: Cargo.toml
services/common/src/: lib.rs
services/identity-service/: Cargo.toml  Dockerfile
services/identity-service/src/: app.rs  handlers.rs  main.rs  models.rs  state.rs
services/scheduler-service/: Cargo.toml  Dockerfile
services/scheduler-service/src/: app.rs  db.rs  handlers.rs  main.rs  models.rs  policy.rs  service.rs  state.rs  storage.rs
services/telemetry-service/: Cargo.toml  Dockerfile
services/telemetry-service/src/: app.rs  handlers.rs  main.rs  models.rs
services/validator-service/: Cargo.toml  Dockerfile
services/validator-service/src/: ai.rs  app.rs  db.rs  handlers.rs  logic.rs  main.rs  models.rs  sandbox.rs  state.rs
