[package]
name = "newral-agent"
version = "1.1.0"
edition = "2021"

[features]
default = []
gui = ["eframe"]

[dependencies]
eframe = { version = "0.29", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
sysinfo = "0.30"
uuid = { version = "1", features = ["v4"] }
