[package]
name = "scheduler-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-stream = "0.1"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
