[package]
name = "validator-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "time"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
sha2 = "0.10"
tracing = "0.1"
newral-common = { path = "../common" }
